@@ -447,3 +447,10 @@ ECPGdescriptor_lvalue(int line, const char *descriptor)
 	ECPGraise(line, ECPG_UNKNOWN_DESCRIPTOR, (char *) descriptor);
 	return NULL;
 }
+
+bool
+ECPGdescribe(int line, bool input, const char *statement, ...)
+{
+	ECPGlog("ECPGdescribe called on line %d for %s in %s\n", line, (input) ? "input" : "output", statement);
+	return false;
+}
