@@ -72,6 +72,8 @@ void		ECPGraise(int line, int code, const char *str);
 bool		ECPGget_desc_header(int, char *, int *);
 bool		ECPGget_desc(int, char *, int,...);
 
+bool		ECPGdescribe(int, bool, const char *, ...);
+
 /* dynamic result allocation */
 void		ECPGfree_auto_mem(void);
 
